# agent-eval

./: LICENSE  README.md  agent-eval-framework-design.md  example.py  pyproject.toml
.github/workflows/: ci.yml
agent_eval/: __init__.py  agent.py  criteria_generator.py  evaluator.py  llm.py  models.py  runner.py  scoring.py
agent_eval/wrappers/: __init__.py  base.py  claude.py  codex.py  gemini.py  shell.py
example_data/input/: source.txt
example_data/reference/: expected_report.txt
scripts/: generate_criteria.py
tests/: conftest.py  test_evaluator.py  test_runner.py  test_scoring.py  test_shell_agent.py  test_wrappers.py
