[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
docx = ["python-docx>=1.1"]
pdf  = ["pdfminer.six>=20221105"]
dev  = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_eval*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.bandit]
targets = ["agent_eval"]
skips = ["B101"]
